--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,24 @@ sudo: false
 
 matrix:
   include:
+    #
+    # Linux / g++-6 / -O0 / standalone / separate compilation
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
+        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O2 / standalone
+    #
     - os: linux
       addons:
         apt:
@@ -12,7 +30,7 @@ matrix:
             - g++-6
       env:
         - CXXFLAGS="-Wall -Wextra -O2"
-        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+        - CONFIGFLAGS="--with-boost=no"
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
 
