--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,40 @@ matrix:
         - CONFIGFLAGS="--enable-separate-compilation"
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
+    #
+    # Linux / clang-3.8 / -O0 / standalone / separate compilation
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
+          packages:
+            - clang-3.8
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
+        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+        - MATRIX_EVAL="CC=clang-3.8 CXX=clang++-3.8"
+      compiler: clang
+    #
+    # macOS / xcode8 / -O0 / standalone / separate compilation
+    #
+    - os: osx
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
+        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+      osx_image: xcode8
+    #
+    # macOS / xcode8 / -O0 / boost 1.64 / separate compilation
+    #
+    - os: osx
+      env:
+        - BOOST_DIR="boost_1_64_0"
+        - BOOST_URL="https://dl.bintray.com/boostorg/release/1.64.0/source/boost_1_64_0.tar.bz2"
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
+        - CONFIGFLAGS="--enable-separate-compilation"
+      osx_image: xcode8
 
 before_install:
   - eval "${MATRIX_EVAL}"
