--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,51 @@ cache:
 matrix:
   include:
     #
+    # Linux / g++-6 / -O2 / standalone
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - CXXFLAGS="-Wall -Wextra -O2"
+        - CONFIGFLAGS="--with-boost=no"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O0 / standalone / handler tracking
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_ENABLE_HANDLER_TRACKING"
+        - CONFIGFLAGS="--with-boost=no"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O0 / standalone / epoll disabled
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_DISABLE_EPOLL"
+        - CONFIGFLAGS="--with-boost=no"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
     # Linux / g++-6 / -O0 / standalone / separate compilation
     #
     - os: linux
@@ -23,7 +68,7 @@ matrix:
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
     #
-    # Linux / g++-6 / -O2 / standalone
+    # Linux / g++-6 / -O0 / standalone / separate compilation / handler tracking
     #
     - os: linux
       addons:
@@ -33,8 +78,57 @@ matrix:
           packages:
             - g++-6
       env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_ENABLE_HANDLER_TRACKING"
+        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O0 / standalone / separate compilation / epoll disabled
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_DISABLE_EPOLL"
+        - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O2 / boost 1.64
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - BOOST_DIR="boost_1_64_0"
+        - BOOST_URL="https://dl.bintray.com/boostorg/release/1.64.0/source/boost_1_64_0.tar.bz2"
         - CXXFLAGS="-Wall -Wextra -O2"
-        - CONFIGFLAGS="--with-boost=no"
+        - CONFIGFLAGS=""
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+      compiler: gcc
+    #
+    # Linux / g++-6 / -O0 / boost 1.64 / epoll disabled
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - BOOST_DIR="boost_1_64_0"
+        - BOOST_URL="https://dl.bintray.com/boostorg/release/1.64.0/source/boost_1_64_0.tar.bz2"
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_DISABLE_EPOLL"
+        - CONFIGFLAGS=""
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
     #
@@ -55,6 +149,22 @@ matrix:
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
     #
+    # Linux / clang-3.8 / -O2 / standalone"
+    #
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
+          packages:
+            - clang-3.8
+      env:
+        - CXXFLAGS="-Wall -Wextra -O2"
+        - CONFIGFLAGS="--with-boost=no"
+        - MATRIX_EVAL="CC=clang-3.8 CXX=clang++-3.8"
+      compiler: clang
+    #
     # Linux / clang-3.8 / -O0 / standalone / separate compilation
     #
     - os: linux
@@ -71,12 +181,38 @@ matrix:
         - MATRIX_EVAL="CC=clang-3.8 CXX=clang++-3.8"
       compiler: clang
     #
+    # macOS / xcode8 / -O2 / standalone
+    #
+    - os: osx
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
+        - CONFIGFLAGS="--with-boost=no"
+      osx_image: xcode8
+    #
+    # macOS / xcode8 / -O0 / standalone / kqueue disabled
+    #
+    - os: osx
+      env:
+        - CXXFLAGS="-Wall -Wextra -O0 -fno-inline -DASIO_DISABLE_KQUEUE"
+        - CONFIGFLAGS="--with-boost=no"
+      osx_image: xcode8
+    #
     # macOS / xcode8 / -O0 / standalone / separate compilation
     #
     - os: osx
       env:
         - CXXFLAGS="-Wall -Wextra -O0 -fno-inline"
         - CONFIGFLAGS="--with-boost=no --enable-separate-compilation"
+      osx_image: xcode8
+    #
+    # macOS / xcode8 / -O2 / boost 1.64
+    #
+    - os: osx
+      env:
+        - BOOST_DIR="boost_1_64_0"
+        - BOOST_URL="https://dl.bintray.com/boostorg/release/1.64.0/source/boost_1_64_0.tar.bz2"
+        - CXXFLAGS="-Wall -Wextra -O2"
+        - CONFIGFLAGS=""
       osx_image: xcode8
     #
     # macOS / xcode8 / -O0 / boost 1.64 / separate compilation
