--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,5 +10,5 @@ environment:
 build_script:
   - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
-  - cd src
+  - cd asio\src
   - nmake -f Makefile.msc
