--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,9 @@ environment:
       STANDALONE: 1
       WARNINGS: 1
       WIN9X: 1
+    - DEBUG: 1
+      BOOSTDIR: C:\Libraries\boost_1_63_0
+      WARNINGS: 1
 
 build_script:
   - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
