--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,3 +21,4 @@ build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - cd asio\src
   - nmake -f Makefile.msc
+  - nmake -f Makefile.msc check
