--- a/asio/src/Makefile.am
+++ b/asio/src/Makefile.am
@@ -1,7 +1,3 @@
-if !STANDALONE
-EXAMPLES_CPP03 = examples/cpp03
-endif
-
 if HAVE_CXX11
 EXAMPLES_CPP11 = examples/cpp11
 endif
@@ -10,9 +6,9 @@ if HAVE_CXX14
 EXAMPLES_CPP14 = examples/cpp14
 endif
 
-SUBDIRS = $(EXAMPLES_CPP03) $(EXAMPLES_CPP11) $(EXAMPLES_CPP14) tests
+SUBDIRS = $(EXAMPLES_CPP11) $(EXAMPLES_CPP14)
 
-DIST_SUBDIRS = examples/cpp03 examples/cpp11 examples/cpp14 examples/cpp17 tests
+DIST_SUBDIRS = examples/cpp11 examples/cpp14 examples/cpp17
 
 EXTRA_DIST = \
 	Makefile.mgw \
